# doomcopy

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/ray/: ray.cpp  ray.h
